Add .gitignore and style.less

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 </head>
 
 <body>
-    <div>heyMIT. Andrew here.</div>
-
+    <div>asdasd</div>
     <script src="js/index.js"></script>
 </body>
 </html>
