--- a/index.html
+++ b/index.html
@@ -1,24 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <meta name="apple-mobile-web-app-capable" content="yes"/>
-    <title>heyMIT</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <meta name="apple-mobile-web-app-capable" content="yes"/>
+  <title>heyMIT</title>
 
-    <link href="stylesheets/style.min.css" rel="stylesheet">
+  <link href="stylesheets/style.min.css" rel="stylesheet">
 
-    <script src="js/jquery-1.10.2.min.js"></script>
-    <script src="js/jquery-ui-1.10.3.min.js"></script>
+  <script src="js/jquery-1.10.2.min.js"></script>
+  <script src="js/jquery-ui-1.10.3.min.js"></script>
 
 
 
 </head>
 
 <body>
-    <div>asdasd</div>
-    <script src="js/index.js"></script>
+  <div class="row">
+    <div class="card-container">
+      <div class="card hidden">
+        <div class="title">
+          hackBCA
+        </div>
+        <img class="preview" src="img/dogecache.png" />
+
+      </div>
+    </div>
+    <div class="card-container">
+      <div class="card hidden">
+      </div>
+    </div>
+    <div class="card-container">
+      <div class="card hidden">
+      </div>
+    </div>
+    <div class="card-container">
+      <div class="card hidden">
+      </div>
+    </div>
+  </div>
+
+
+  <script src="js/index.js"></script>
 </body>
 </html>
