--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
 
 </head>
 
-<body>
+<body class="hidden">
+
+  <div class="load-container">
+    <div class="loader-icon">Loading...</div>
+  </div>
 
   <div class="header">
     <div class="top hidden">Hey, MIT. It's Andrew.</div>
